@@ -737,6 +737,7 @@ ZEND_FUNCTION(get_class_vars)
 	} else {
 		array_init(return_value);
 		add_class_vars(*pce, &(*pce)->default_properties, return_value TSRMLS_CC);
+		zend_update_class_constants(*pce TSRMLS_CC);
 		add_class_vars(*pce, (*pce)->static_members, return_value TSRMLS_CC);
 	}
 }
